--- a/personal_finance_ui/package.json
+++ b/personal_finance_ui/package.json
@@ -14,16 +14,19 @@
     "chartist": "0.10.1",
     "classnames": "2.2.6",
     "material-table": "^1.3.0",
+    "moment": "^2.24.0",
     "npm-run-all": "4.1.3",
     "perfect-scrollbar": "1.4.0",
     "react": "16.4.1",
     "react-chartist": "0.13.1",
     "react-dom": "16.4.1",
+    "react-google-charts": "^3.0.10",
     "react-google-maps": "9.4.5",
     "react-month-picker": "^1.3.8",
     "react-router-dom": "4.3.1",
     "react-scripts": "1.1.4",
-    "react-swipeable-views": "0.12.15"
+    "react-swipeable-views": "0.12.15",
+    "underscore": "^1.9.1"
   },
   "scripts": {
     "start": "react-scripts start",
