--- a/personal_finance_ui/package.json
+++ b/personal_finance_ui/package.json
@@ -20,6 +20,7 @@
     "react": "16.4.1",
     "react-chartist": "0.13.1",
     "react-dom": "16.4.1",
+    "react-dropdown": "^1.6.4",
     "react-google-charts": "^3.0.10",
     "react-google-maps": "9.4.5",
     "react-month-picker": "^1.3.8",
